--- a/notebooks/01_importacao_e_limpeza.ipynb
+++ b/notebooks/01_importacao_e_limpeza.ipynb
@@ -1,16 +1,371 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Notebook 01 - Importação e Limpeza de Dados",
+   "id": "a5d820cad4f90289"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### Inicialmente, iremos importar o dataset .csv para um dataframe Pandas e depois salvar os dados no banco de dados PostgreSQL, para simular um cenário realista de bancos, os quais guardam os dados de seus clientes em bancos de dados relacionais.",
+   "id": "9bd409ca2b474298"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "1. Importação das bibliotecas necessárias e leitura do dataset .csv em um dataframe Pandas.",
+   "id": "ae8a78f9a49d2d4f"
+  },
+  {
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2025-12-22T20:08:53.377011Z",
+     "start_time": "2025-12-22T20:08:53.368215Z"
+    }
    },
-   "outputs": [],
+   "cell_type": "code",
    "source": [
-    ""
-   ]
+    "import pandas as pd\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "data = pd.read_csv('../data/german_credit_data.csv')\n",
+    "data.head()\n"
+   ],
+   "id": "1d785445e6c70c6d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   Unnamed: 0  Age     Sex  Job Housing Saving accounts Checking account  \\\n",
+       "0           0   67    male    2     own             NaN           little   \n",
+       "1           1   22  female    2     own          little         moderate   \n",
+       "2           2   49    male    1     own          little              NaN   \n",
+       "3           3   45    male    2    free          little           little   \n",
+       "4           4   53    male    2    free          little           little   \n",
+       "\n",
+       "   Credit amount  Duration              Purpose  Risk  \n",
+       "0           1169         6             radio/TV  good  \n",
+       "1           5951        48             radio/TV   bad  \n",
+       "2           2096        12            education  good  \n",
+       "3           7882        42  furniture/equipment  good  \n",
+       "4           4870        24                  car   bad  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Job</th>\n",
+       "      <th>Housing</th>\n",
+       "      <th>Saving accounts</th>\n",
+       "      <th>Checking account</th>\n",
+       "      <th>Credit amount</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Purpose</th>\n",
+       "      <th>Risk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>own</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>little</td>\n",
+       "      <td>1169</td>\n",
+       "      <td>6</td>\n",
+       "      <td>radio/TV</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2</td>\n",
+       "      <td>own</td>\n",
+       "      <td>little</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>5951</td>\n",
+       "      <td>48</td>\n",
+       "      <td>radio/TV</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>49</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>own</td>\n",
+       "      <td>little</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2096</td>\n",
+       "      <td>12</td>\n",
+       "      <td>education</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>45</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>free</td>\n",
+       "      <td>little</td>\n",
+       "      <td>little</td>\n",
+       "      <td>7882</td>\n",
+       "      <td>42</td>\n",
+       "      <td>furniture/equipment</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>53</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>free</td>\n",
+       "      <td>little</td>\n",
+       "      <td>little</td>\n",
+       "      <td>4870</td>\n",
+       "      <td>24</td>\n",
+       "      <td>car</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "2. Adicionar coluna de salário anual fictício.",
+   "id": "7d5e7c77bebf9e26"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T20:09:00.949535Z",
+     "start_time": "2025-12-22T20:09:00.947045Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def estimar_salario(job_level):\n",
+    "    if job_level == 0:\n",
+    "        return np.random.uniform(15000, 22000) # R$ anual\n",
+    "    elif job_level == 1:\n",
+    "        return np.random.uniform(25000, 40000)\n",
+    "    elif job_level == 2:\n",
+    "        return np.random.uniform(45000, 80000)\n",
+    "    elif job_level == 3:\n",
+    "        return np.random.uniform(90000, 180000)\n",
+    "    else:\n",
+    "        return np.random.uniform(30000, 50000)"
+   ],
+   "id": "56b9481502de633a",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T20:10:38.656424Z",
+     "start_time": "2025-12-22T20:10:38.645741Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "data['salario_anual'] = data['Job'].apply(estimar_salario) # Aplicar a função estimar_salario numa coluna nova 'salario_anual' usando 'Job' como referência\n",
+    "data['salario_anual'] = data['salario_anual'].round(2) # Arredonda para 2 casas decimais para deixar semelhante ao dinheiro real\n",
+    "\n",
+    "data = data.drop(columns=['Unnamed: 0', 'Job'], axis=1) # Remove colunas desnecessárias\n",
+    "\n",
+    "dicionario = { # Cria um dicionário para poder renomear as colunas com base no nome das colunas das tabelas do banco de dados\n",
+    "    'Age': 'idade',\n",
+    "    'Sex': 'sexo',\n",
+    "    'Housing': 'situacao_moradia',\n",
+    "    'Saving accounts': 'status_poupanca',\n",
+    "    'Checking account': 'status_conta_corrente',\n",
+    "    'Credit amount': 'valor_emprestimo',\n",
+    "    'Duration': 'prazo_meses',\n",
+    "    'Purpose': 'finalidade_emprestimo',\n",
+    "    'Risk': 'status_inadimplencia'\n",
+    "}\n",
+    "\n",
+    "data = data.rename(columns=dicionario) # Renomeia as colunas do dataframe\n",
+    "\n",
+    "data['status_inadimplencia'] = data['status_inadimplencia'].map({'good': 0, 'bad': 1}) # converte valores good e bad para 0 e 1\n",
+    "data.head()"
+   ],
+   "id": "e3576897b6e55141",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   idade    sexo situacao_moradia status_poupanca status_conta_corrente  \\\n",
+       "0     67    male              own             NaN                little   \n",
+       "1     22  female              own          little              moderate   \n",
+       "2     49    male              own          little                   NaN   \n",
+       "3     45    male             free          little                little   \n",
+       "4     53    male             free          little                little   \n",
+       "\n",
+       "   valor_emprestimo  prazo_meses finalidade_emprestimo  status_inadimplencia  \\\n",
+       "0              1169            6              radio/TV                     0   \n",
+       "1              5951           48              radio/TV                     1   \n",
+       "2              2096           12             education                     0   \n",
+       "3              7882           42   furniture/equipment                     0   \n",
+       "4              4870           24                   car                     1   \n",
+       "\n",
+       "   salario_anual  \n",
+       "0       77822.93  \n",
+       "1       47114.21  \n",
+       "2       28371.53  \n",
+       "3       72152.17  \n",
+       "4       59938.93  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idade</th>\n",
+       "      <th>sexo</th>\n",
+       "      <th>situacao_moradia</th>\n",
+       "      <th>status_poupanca</th>\n",
+       "      <th>status_conta_corrente</th>\n",
+       "      <th>valor_emprestimo</th>\n",
+       "      <th>prazo_meses</th>\n",
+       "      <th>finalidade_emprestimo</th>\n",
+       "      <th>status_inadimplencia</th>\n",
+       "      <th>salario_anual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>67</td>\n",
+       "      <td>male</td>\n",
+       "      <td>own</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>little</td>\n",
+       "      <td>1169</td>\n",
+       "      <td>6</td>\n",
+       "      <td>radio/TV</td>\n",
+       "      <td>0</td>\n",
+       "      <td>77822.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22</td>\n",
+       "      <td>female</td>\n",
+       "      <td>own</td>\n",
+       "      <td>little</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>5951</td>\n",
+       "      <td>48</td>\n",
+       "      <td>radio/TV</td>\n",
+       "      <td>1</td>\n",
+       "      <td>47114.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>49</td>\n",
+       "      <td>male</td>\n",
+       "      <td>own</td>\n",
+       "      <td>little</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2096</td>\n",
+       "      <td>12</td>\n",
+       "      <td>education</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28371.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45</td>\n",
+       "      <td>male</td>\n",
+       "      <td>free</td>\n",
+       "      <td>little</td>\n",
+       "      <td>little</td>\n",
+       "      <td>7882</td>\n",
+       "      <td>42</td>\n",
+       "      <td>furniture/equipment</td>\n",
+       "      <td>0</td>\n",
+       "      <td>72152.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>53</td>\n",
+       "      <td>male</td>\n",
+       "      <td>free</td>\n",
+       "      <td>little</td>\n",
+       "      <td>little</td>\n",
+       "      <td>4870</td>\n",
+       "      <td>24</td>\n",
+       "      <td>car</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59938.93</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
   }
  ],
  "metadata": {
