Adiciona funções de conversão categórica no notebook 01

--- a/notebooks/01_importacao_e_limpeza.ipynb
+++ b/notebooks/01_importacao_e_limpeza.ipynb
@@ -21,8 +21,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-22T20:08:53.377011Z",
-     "start_time": "2025-12-22T20:08:53.368215Z"
+     "end_time": "2025-12-22T20:52:40.345798Z",
+     "start_time": "2025-12-22T20:52:40.337533Z"
     }
    },
    "cell_type": "code",
@@ -161,24 +161,41 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "2. Adicionar coluna de salário anual fictício.",
-   "id": "7d5e7c77bebf9e26"
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-22T20:09:00.949535Z",
-     "start_time": "2025-12-22T20:09:00.947045Z"
+     "end_time": "2025-12-22T20:52:41.496267Z",
+     "start_time": "2025-12-22T20:52:41.493948Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(data.columns)",
+   "id": "a912a919d0525e7e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Unnamed: 0', 'Age', 'Sex', 'Job', 'Housing', 'Saving accounts',\n",
+      "       'Checking account', 'Credit amount', 'Duration', 'Purpose', 'Risk'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "execution_count": 33
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T20:52:42.714978Z",
+     "start_time": "2025-12-22T20:52:42.712390Z"
     }
    },
    "cell_type": "code",
@@ -199,13 +216,13 @@
    ],
    "id": "56b9481502de633a",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-22T20:10:38.656424Z",
-     "start_time": "2025-12-22T20:10:38.645741Z"
+     "end_time": "2025-12-22T20:52:43.689643Z",
+     "start_time": "2025-12-22T20:52:43.677848Z"
     }
    },
    "cell_type": "code",
@@ -230,7 +247,7 @@
     "data = data.rename(columns=dicionario) # Renomeia as colunas do dataframe\n",
     "\n",
     "data['status_inadimplencia'] = data['status_inadimplencia'].map({'good': 0, 'bad': 1}) # converte valores good e bad para 0 e 1\n",
-    "data.head()"
+    "data.head(10)"
    ],
    "id": "e3576897b6e55141",
    "outputs": [
@@ -243,6 +260,11 @@
        "2     49    male              own          little                   NaN   \n",
        "3     45    male             free          little                little   \n",
        "4     53    male             free          little                little   \n",
+       "5     35    male             free             NaN                   NaN   \n",
+       "6     53    male              own      quite rich                   NaN   \n",
+       "7     35    male             rent          little              moderate   \n",
+       "8     61    male              own            rich                   NaN   \n",
+       "9     28    male              own          little              moderate   \n",
        "\n",
        "   valor_emprestimo  prazo_meses finalidade_emprestimo  status_inadimplencia  \\\n",
        "0              1169            6              radio/TV                     0   \n",
@@ -250,13 +272,23 @@
        "2              2096           12             education                     0   \n",
        "3              7882           42   furniture/equipment                     0   \n",
        "4              4870           24                   car                     1   \n",
+       "5              9055           36             education                     0   \n",
+       "6              2835           24   furniture/equipment                     0   \n",
+       "7              6948           36                   car                     0   \n",
+       "8              3059           12              radio/TV                     0   \n",
+       "9              5234           30                   car                     1   \n",
        "\n",
        "   salario_anual  \n",
-       "0       77822.93  \n",
-       "1       47114.21  \n",
-       "2       28371.53  \n",
-       "3       72152.17  \n",
-       "4       59938.93  "
+       "0       67528.64  \n",
+       "1       58261.25  \n",
+       "2       26934.80  \n",
+       "3       64749.48  \n",
+       "4       59731.97  \n",
+       "5       26669.52  \n",
+       "6       76308.28  \n",
+       "7      113033.52  \n",
+       "8       39344.67  \n",
+       "9      114332.90  "
       ],
       "text/html": [
        "<div>\n",
@@ -301,7 +333,7 @@
        "      <td>6</td>\n",
        "      <td>radio/TV</td>\n",
        "      <td>0</td>\n",
-       "      <td>77822.93</td>\n",
+       "      <td>67528.64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -314,7 +346,7 @@
        "      <td>48</td>\n",
        "      <td>radio/TV</td>\n",
        "      <td>1</td>\n",
-       "      <td>47114.21</td>\n",
+       "      <td>58261.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -327,7 +359,7 @@
        "      <td>12</td>\n",
        "      <td>education</td>\n",
        "      <td>0</td>\n",
-       "      <td>28371.53</td>\n",
+       "      <td>26934.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -340,7 +372,7 @@
        "      <td>42</td>\n",
        "      <td>furniture/equipment</td>\n",
        "      <td>0</td>\n",
-       "      <td>72152.17</td>\n",
+       "      <td>64749.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -353,19 +385,270 @@
        "      <td>24</td>\n",
        "      <td>car</td>\n",
        "      <td>1</td>\n",
-       "      <td>59938.93</td>\n",
+       "      <td>59731.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>35</td>\n",
+       "      <td>male</td>\n",
+       "      <td>free</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9055</td>\n",
+       "      <td>36</td>\n",
+       "      <td>education</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26669.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>53</td>\n",
+       "      <td>male</td>\n",
+       "      <td>own</td>\n",
+       "      <td>quite rich</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2835</td>\n",
+       "      <td>24</td>\n",
+       "      <td>furniture/equipment</td>\n",
+       "      <td>0</td>\n",
+       "      <td>76308.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>35</td>\n",
+       "      <td>male</td>\n",
+       "      <td>rent</td>\n",
+       "      <td>little</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>6948</td>\n",
+       "      <td>36</td>\n",
+       "      <td>car</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113033.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>61</td>\n",
+       "      <td>male</td>\n",
+       "      <td>own</td>\n",
+       "      <td>rich</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3059</td>\n",
+       "      <td>12</td>\n",
+       "      <td>radio/TV</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39344.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>28</td>\n",
+       "      <td>male</td>\n",
+       "      <td>own</td>\n",
+       "      <td>little</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>5234</td>\n",
+       "      <td>30</td>\n",
+       "      <td>car</td>\n",
+       "      <td>1</td>\n",
+       "      <td>114332.90</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 35
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "3. Assim como foi feito para a coluna de salário anual, iremos mudar as colunas status_poupança e status_conta_corrente para valores numéricos",
+   "id": "dbfbaf87b2f3ee44"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T20:53:13.251745Z",
+     "start_time": "2025-12-22T20:53:13.211887Z"
+    }
+   },
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   idade    sexo situacao_moradia  status_poupanca  status_conta_corrente  \\\n",
+       "0     67    male              own              NaN                    NaN   \n",
+       "1     22  female              own              NaN                    NaN   \n",
+       "2     49    male              own              NaN                    NaN   \n",
+       "3     45    male             free              NaN                    NaN   \n",
+       "4     53    male             free              NaN                    NaN   \n",
+       "\n",
+       "   valor_emprestimo  prazo_meses finalidade_emprestimo  status_inadimplencia  \\\n",
+       "0              1169            6              radio/TV                     0   \n",
+       "1              5951           48              radio/TV                     1   \n",
+       "2              2096           12             education                     0   \n",
+       "3              7882           42   furniture/equipment                     0   \n",
+       "4              4870           24                   car                     1   \n",
+       "\n",
+       "   salario_anual  \n",
+       "0       67528.64  \n",
+       "1       58261.25  \n",
+       "2       26934.80  \n",
+       "3       64749.48  \n",
+       "4       59731.97  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idade</th>\n",
+       "      <th>sexo</th>\n",
+       "      <th>situacao_moradia</th>\n",
+       "      <th>status_poupanca</th>\n",
+       "      <th>status_conta_corrente</th>\n",
+       "      <th>valor_emprestimo</th>\n",
+       "      <th>prazo_meses</th>\n",
+       "      <th>finalidade_emprestimo</th>\n",
+       "      <th>status_inadimplencia</th>\n",
+       "      <th>salario_anual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>67</td>\n",
+       "      <td>male</td>\n",
+       "      <td>own</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1169</td>\n",
+       "      <td>6</td>\n",
+       "      <td>radio/TV</td>\n",
+       "      <td>0</td>\n",
+       "      <td>67528.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22</td>\n",
+       "      <td>female</td>\n",
+       "      <td>own</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5951</td>\n",
+       "      <td>48</td>\n",
+       "      <td>radio/TV</td>\n",
+       "      <td>1</td>\n",
+       "      <td>58261.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>49</td>\n",
+       "      <td>male</td>\n",
+       "      <td>own</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2096</td>\n",
+       "      <td>12</td>\n",
+       "      <td>education</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26934.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45</td>\n",
+       "      <td>male</td>\n",
+       "      <td>free</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7882</td>\n",
+       "      <td>42</td>\n",
+       "      <td>furniture/equipment</td>\n",
+       "      <td>0</td>\n",
+       "      <td>64749.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>53</td>\n",
+       "      <td>male</td>\n",
+       "      <td>free</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4870</td>\n",
+       "      <td>24</td>\n",
+       "      <td>car</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59731.97</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 38,
+   "source": [
+    "data['status_conta_corrente'] = data['status_conta_corrente'].map({'little': 0, 'moderate': 1, 'rich': 2, 'quite rich': 3}) # repete o processo feito para o salário anual\n",
+    "\n",
+    "data['status_poupanca'] = data['status_poupanca'].map({'little': 0, 'moderate': 1, 'rich': 2, 'quite rich': 3})\n",
+    "\n",
+    "\n",
+    "def estimar_conta_corrente(conta_corrente):\n",
+    "    if conta_corrente == 0:\n",
+    "        return np.random.uniform(25000, 40000)\n",
+    "    elif conta_corrente == 1:\n",
+    "        return np.random.uniform(45000, 80000)\n",
+    "    elif conta_corrente == 2:\n",
+    "        return np.random.uniform(90000, 180000)\n",
+    "    elif conta_corrente == 3:\n",
+    "        return np.random.uniform(100001, 1000000)\n",
+    "    else:\n",
+    "        return data['status_conta_corrente'].mean() # retorna a média da coluna como valor padrão\n",
+    "\n",
+    "def estimar_conta_poupanca(conta_poupanca):\n",
+    "    if conta_poupanca == 0:\n",
+    "        return np.random.uniform(1, 1000)\n",
+    "    elif conta_poupanca == 1:\n",
+    "        return np.random.uniform(1001, 10000)\n",
+    "    elif conta_poupanca == 2:\n",
+    "        return np.random.uniform(10001, 100000)\n",
+    "    elif conta_poupanca == 3:\n",
+    "        return np.random.uniform(100001, 1000000)\n",
+    "    else:\n",
+    "        return data['status_poupanca'].mean()\n",
+    "\n",
+    "# falta também renomear as colunas para conta_corrente e conta_poupanca, já que estarei mostrando valores numéricos e não categóricos\n",
+    "\n",
+    "data['status_conta_corrente'] = data['status_conta_corrente'].apply(estimar_conta_corrente).round(2)\n",
+    "data['status_poupanca'] = data['status_poupanca'].apply(estimar_conta_poupanca).round(2)\n",
+    "\n",
+    "data.head()"
+   ],
+   "id": "d7384939e88f2303"
   }
  ],
  "metadata": {
