Adiciona conexão ao banco de dados e converte df para sql

--- a/notebooks/01_importacao_e_limpeza.ipynb
+++ b/notebooks/01_importacao_e_limpeza.ipynb
@@ -798,6 +798,107 @@
     }
    ],
    "execution_count": 75
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "7. Por fim, salvamos o dataframe limpo no banco de dados PostgreSQL.",
+   "id": "ff01690d2cf764a1"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T22:56:58.756531Z",
+     "start_time": "2025-12-22T22:56:58.707632Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "engine = create_engine('postgresql://admin_credito:senha_secreta_123@localhost:5432/db_risco_credito')\n",
+    "\n",
+    "print('Engine criada com êxito!')"
+   ],
+   "id": "16e1ec0e8b18d81e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Engine criada com êxito!\n"
+     ]
+    }
+   ],
+   "execution_count": 76
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T22:57:00.228007Z",
+     "start_time": "2025-12-22T22:57:00.145695Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "data.to_sql('clientes', engine, if_exists='append', index=False)\n",
+    "\n",
+    "print('Dados inseridos com êxito no banco de dados!')"
+   ],
+   "id": "73e5a58ed3d3c614",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dados inseridos com êxito no banco de dados!\n"
+     ]
+    }
+   ],
+   "execution_count": 77
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T22:57:01.354041Z",
+     "start_time": "2025-12-22T22:57:01.346555Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df_teste = pd.read_sql('SELECT * FROM clientes LIMIT 5;', engine)\n",
+    "print(df_teste)"
+   ],
+   "id": "84c7e23d741669ff",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   idade    sexo situacao_moradia  valor_conta_poupanca  valor_conta_corrente  \\\n",
+      "0     67    male              own                  0.00              27164.52   \n",
+      "1     22  female              own                613.78              48999.87   \n",
+      "2     49    male              own                 52.37                  0.00   \n",
+      "3     45    male             free                982.68              37072.32   \n",
+      "4     53    male             free                305.36              33075.00   \n",
+      "\n",
+      "   valor_emprestimo  prazo_meses finalidade_emprestimo  status_inadimplencia  \\\n",
+      "0              1169            6              radio/TV                     0   \n",
+      "1              5951           48              radio/TV                     1   \n",
+      "2              2096           12             education                     0   \n",
+      "3              7882           42   furniture/equipment                     0   \n",
+      "4              4870           24                   car                     1   \n",
+      "\n",
+      "   salario_anual  \n",
+      "0       46281.64  \n",
+      "1       56886.66  \n",
+      "2       36356.54  \n",
+      "3       72999.24  \n",
+      "4       56517.81  \n"
+     ]
+    }
+   ],
+   "execution_count": 78
   }
  ],
  "metadata": {
