Migra os dados para a tabela de operações e finaliza a fase 1, faltando apenas rápidos ajustes no markdown do notebook

--- a/notebooks/01_importacao_e_limpeza.ipynb
+++ b/notebooks/01_importacao_e_limpeza.ipynb
@@ -802,7 +802,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "7. Por fim, salvamos o dataframe limpo no banco de dados PostgreSQL.",
+   "source": "7. Por fim, salvamos o dataframe limpo no banco de dados PostgreSQL. Para isso, criamos uma engine de conexão, usamos a função `to-sql` e depois testamos a inserção lendo algumas linhas da tabela.",
    "id": "ff01690d2cf764a1"
   },
   {
@@ -899,6 +899,571 @@
     }
    ],
    "execution_count": 78
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "8. Linkando as duas tabelas SQL e fazendo migração de dados",
+   "id": "2d2926df296a09ab"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T23:16:18.922040Z",
+     "start_time": "2025-12-22T23:16:18.909714Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sqlalchemy import text\n",
+    "\n",
+    "with engine.connect() as conn:\n",
+    "    # 1. Adiciona a coluna como um serial (auto-incremento)\n",
+    "    conn.execute(text(\"ALTER TABLE clientes ADD COLUMN cliente_id SERIAL PRIMARY KEY;\"))\n",
+    "    conn.commit()\n",
+    "\n",
+    "print(\"Coluna cliente_id restaurada com sucesso!\")\n",
+    "\n"
+   ],
+   "id": "60d4b423a67edfe7",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coluna cliente_id restaurada com sucesso!\n"
+     ]
+    }
+   ],
+   "execution_count": 90
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T23:16:38.872542Z",
+     "start_time": "2025-12-22T23:16:38.869238Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "with engine.connect() as conn:\n",
+    "    result = conn.execute(text(\"SELECT * FROM clientes LIMIT 0\"))\n",
+    "    print(result.keys())"
+   ],
+   "id": "d04a957ee7cca12",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMKeyView(['idade', 'sexo', 'situacao_moradia', 'valor_conta_poupanca', 'valor_conta_corrente', 'valor_emprestimo', 'prazo_meses', 'finalidade_emprestimo', 'status_inadimplencia', 'salario_anual', 'cliente_id'])\n"
+     ]
+    }
+   ],
+   "execution_count": 91
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T23:17:31.065544Z",
+     "start_time": "2025-12-22T23:17:31.060365Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_clientes_db = pd.read_sql('SELECT cliente_id, idade, sexo FROM clientes;', engine)",
+   "id": "7410be2774839cd3",
+   "outputs": [],
+   "execution_count": 92
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T23:17:49.349806Z",
+     "start_time": "2025-12-22T23:17:49.347328Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data['cliente_id'] = df_clientes_db['cliente_id']",
+   "id": "b841f24310b7c62f",
+   "outputs": [],
+   "execution_count": 94
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T23:19:50.001830Z",
+     "start_time": "2025-12-22T23:19:49.996779Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df_operacoes = data[['cliente_id', 'valor_emprestimo', 'prazo_meses', 'finalidade_emprestimo']].copy()\n",
+    "\n",
+    "df_operacoes.head()"
+   ],
+   "id": "6c2ece084dbf052b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   cliente_id  valor_emprestimo  prazo_meses finalidade_emprestimo\n",
+       "0           1              1169            6              radio/TV\n",
+       "1           2              5951           48              radio/TV\n",
+       "2           3              2096           12             education\n",
+       "3           4              7882           42   furniture/equipment\n",
+       "4           5              4870           24                   car"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cliente_id</th>\n",
+       "      <th>valor_emprestimo</th>\n",
+       "      <th>prazo_meses</th>\n",
+       "      <th>finalidade_emprestimo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1169</td>\n",
+       "      <td>6</td>\n",
+       "      <td>radio/TV</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5951</td>\n",
+       "      <td>48</td>\n",
+       "      <td>radio/TV</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2096</td>\n",
+       "      <td>12</td>\n",
+       "      <td>education</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>7882</td>\n",
+       "      <td>42</td>\n",
+       "      <td>furniture/equipment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4870</td>\n",
+       "      <td>24</td>\n",
+       "      <td>car</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 95
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "9. Migrar para a tabela operações no banco de dados",
+   "id": "fef5ec97c50170d1"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T23:22:49.290328Z",
+     "start_time": "2025-12-22T23:22:49.261943Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df_operacoes.to_sql('operacoes_credito', con=engine, if_exists='append', index=False)\n",
+    "\n",
+    "print(\"Migração feita com sucesso!\")"
+   ],
+   "id": "86d78df0854771c0",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Migração feita com sucesso!\n"
+     ]
+    }
+   ],
+   "execution_count": 96
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "10. Ajuste na estrutura das tabelas",
+   "id": "19e3efdbbfaa6f08"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T23:27:32.643883Z",
+     "start_time": "2025-12-22T23:27:32.623564Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sqlalchemy import text\n",
+    "\n",
+    "with engine.connect() as conn:\n",
+    "    # Ajustando para numérico (numeric) para aceitar os valores gerados pelo numpy\n",
+    "    conn.execute(text(\"ALTER TABLE clientes ALTER COLUMN valor_conta_poupanca TYPE numeric(12,2) USING valor_conta_poupanca::numeric;\"))\n",
+    "    conn.execute(text(\"ALTER TABLE clientes ALTER COLUMN valor_conta_corrente TYPE numeric(12,2) USING valor_conta_corrente::numeric;\"))\n",
+    "    conn.commit()\n",
+    "print(\"Tipos de dados atualizados!\")"
+   ],
+   "id": "d95768330ee4c8b4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tipos de dados atualizados!\n"
+     ]
+    }
+   ],
+   "execution_count": 98
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T23:28:03.477089Z",
+     "start_time": "2025-12-22T23:28:03.474689Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "data = data.rename(columns={\n",
+    "    'valor_poupanca': 'valor_conta_poupanca', # Ajuste conforme necessário\n",
+    "    'salario_anual': 'salario_anual'\n",
+    "})"
+   ],
+   "id": "9fe11b9d9582910a",
+   "outputs": [],
+   "execution_count": 99
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T23:28:14.624423Z",
+     "start_time": "2025-12-22T23:28:14.555955Z"
+    }
+   },
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fase 1 concluída com sucesso! 🚀\n"
+     ]
+    }
+   ],
+   "execution_count": 101,
+   "source": [
+    "# 1. Enviar Clientes (usamos replace para limpar qualquer erro de estrutura anterior)\n",
+    "colunas_clientes = [\n",
+    "    'cliente_id', 'idade', 'sexo', 'situacao_moradia',\n",
+    "    'valor_conta_poupanca', 'valor_conta_corrente', 'salario_anual'\n",
+    "]\n",
+    "data[colunas_clientes].to_sql('clientes', con=engine, if_exists='replace', index=False)\n",
+    "\n",
+    "# 2. Enviar Operações (usamos append para adicionar à tabela de operações)\n",
+    "colunas_operacoes = [\n",
+    "    'cliente_id', 'valor_emprestimo', 'prazo_meses', 'finalidade_emprestimo', 'status_inadimplencia'\n",
+    "]\n",
+    "data[colunas_operacoes].to_sql('operacoes_credito', con=engine, if_exists='replace', index=False)\n",
+    "\n",
+    "print(\"Fase 1 concluída com sucesso! 🚀\")"
+   ],
+   "id": "9b5c91d26902ce1e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "11. Testes de verificação",
+   "id": "ccc852508ae264d4"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T23:29:46.388597Z",
+     "start_time": "2025-12-22T23:29:46.374076Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Perguntando ao SQL quantas linhas existem em cada tabela\n",
+    "contagem_clientes = pd.read_sql('SELECT COUNT(*) as total FROM clientes', con=engine).iloc[0]['total']\n",
+    "contagem_operacoes = pd.read_sql('SELECT COUNT(*) as total FROM operacoes_credito', con=engine).iloc[0]['total']\n",
+    "\n",
+    "print(f\"Total no Pandas: {len(data)}\")\n",
+    "print(f\"Total na Tabela Clientes (SQL): {contagem_clientes}\")\n",
+    "print(f\"Total na Tabela Operações (SQL): {contagem_operacoes}\")"
+   ],
+   "id": "f1ce1c086c2a6969",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total no Pandas: 1000\n",
+      "Total na Tabela Clientes (SQL): 1000\n",
+      "Total na Tabela Operações (SQL): 1000\n"
+     ]
+    }
+   ],
+   "execution_count": 102
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T23:30:00.372407Z",
+     "start_time": "2025-12-22T23:30:00.366566Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "soma_pandas = data['salario_anual'].sum()\n",
+    "soma_sql = pd.read_sql('SELECT SUM(salario_anual) FROM clientes', con=engine).iloc[0,0]\n",
+    "\n",
+    "print(f\"Soma Salários (Pandas): {soma_pandas:.2f}\")\n",
+    "print(f\"Soma Salários (SQL): {soma_sql:.2f}\")"
+   ],
+   "id": "b64ced51b8effd86",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Soma Salários (Pandas): 66017833.54\n",
+      "Soma Salários (SQL): 66017833.54\n"
+     ]
+    }
+   ],
+   "execution_count": 103
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T23:30:19.349438Z",
+     "start_time": "2025-12-22T23:30:19.341623Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "query_validacao = \"\"\"\n",
+    "SELECT\n",
+    "    c.cliente_id,\n",
+    "    c.sexo,\n",
+    "    c.valor_conta_poupanca,\n",
+    "    o.valor_emprestimo,\n",
+    "    o.status_inadimplencia\n",
+    "FROM clientes c\n",
+    "JOIN operacoes_credito o ON c.cliente_id = o.cliente_id\n",
+    "LIMIT 5;\n",
+    "\"\"\"\n",
+    "df_validacao = pd.read_sql(query_validacao, con=engine)\n",
+    "display(df_validacao)"
+   ],
+   "id": "ecbe4cf64adf07e2",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   cliente_id    sexo  valor_conta_poupanca  valor_emprestimo  \\\n",
+       "0           1    male                  0.00              1169   \n",
+       "1           2  female                613.78              5951   \n",
+       "2           3    male                 52.37              2096   \n",
+       "3           4    male                982.68              7882   \n",
+       "4           5    male                305.36              4870   \n",
+       "\n",
+       "   status_inadimplencia  \n",
+       "0                     0  \n",
+       "1                     1  \n",
+       "2                     0  \n",
+       "3                     0  \n",
+       "4                     1  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cliente_id</th>\n",
+       "      <th>sexo</th>\n",
+       "      <th>valor_conta_poupanca</th>\n",
+       "      <th>valor_emprestimo</th>\n",
+       "      <th>status_inadimplencia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1169</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>female</td>\n",
+       "      <td>613.78</td>\n",
+       "      <td>5951</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>52.37</td>\n",
+       "      <td>2096</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>male</td>\n",
+       "      <td>982.68</td>\n",
+       "      <td>7882</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>male</td>\n",
+       "      <td>305.36</td>\n",
+       "      <td>4870</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    }
+   ],
+   "execution_count": 104
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T23:33:16.060892Z",
+     "start_time": "2025-12-22T23:33:16.042788Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Verificando a estrutura real da tabela clientes no dicionário de dados do Postgres\n",
+    "query_schema = \"\"\"\n",
+    "SELECT column_name, data_type\n",
+    "FROM information_schema.columns\n",
+    "WHERE table_name = 'clientes';\n",
+    "\"\"\"\n",
+    "print(pd.read_sql(query_schema, con=engine))"
+   ],
+   "id": "c764fc3dfc331f5d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            column_name         data_type\n",
+      "0            cliente_id            bigint\n",
+      "1                 idade            bigint\n",
+      "2                  sexo              text\n",
+      "3      situacao_moradia              text\n",
+      "4  valor_conta_poupanca  double precision\n",
+      "5  valor_conta_corrente  double precision\n",
+      "6         salario_anual  double precision\n"
+     ]
+    }
+   ],
+   "execution_count": 105
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T23:33:42.472893Z",
+     "start_time": "2025-12-22T23:33:42.466753Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Verificando a estrutura real da tabela clientes no dicionário de dados do Postgres\n",
+    "query_schema = \"\"\"\n",
+    "SELECT column_name, data_type\n",
+    "FROM information_schema.columns\n",
+    "WHERE table_name = 'operacoes_credito';\n",
+    "\"\"\"\n",
+    "print(pd.read_sql(query_schema, con=engine))"
+   ],
+   "id": "d4ca2ecc799aba68",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             column_name data_type\n",
+      "0             cliente_id    bigint\n",
+      "1       valor_emprestimo    bigint\n",
+      "2            prazo_meses    bigint\n",
+      "3  finalidade_emprestimo      text\n",
+      "4   status_inadimplencia    bigint\n"
+     ]
+    }
+   ],
+   "execution_count": 106
   }
  ],
  "metadata": {
